# whisperdict

./: .gitignore  LICENSE  PROJECT.md  README.md  index.html  license-signing-public.pem  package-lock.json  package.json  playwright.config.js  tailwind.config.ts
.github/workflows/: release.yml  test.yml
docs/: conventional-commits.md  release-process.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons-app/: icon.icns
src-tauri/keys/: whisperdict_license_public_kid1.pem
src-tauri/src/: app_state.rs  audio.rs  child_transcribe.rs  command_errors.rs  config.rs  global_config.rs  hotkeys.rs  lib.rs  licensing.rs  main.rs  models.rs  paste.rs  recording.rs  transcription.rs  tray.rs  wayland_hotkeys.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  separator.tsx  textarea.tsx
src/lib/: ecoApi.ts  mockEcoApi.ts  mockWhisperdictApi.ts  whisperdictApi.ts
tests/e2e/: eco.spec.js  whisperdict.spec.js
