[package]
name = "ECO"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
arboard = "3.4.0"
anyhow = "1.0.95"
ashpd = { version = "0.12.0", default-features = false, features = ["tokio"] }
cpal = "0.15.3"
directories = "5.0.1"
enigo = "0.2.1"
futures-util = "0.3.31"
hound = "3.5.1"
 rdev = "0.5.3"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.12.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
which = "6.0.2"
whisper-rs = "0.11.1"
